docs: add week 1 homework to README
Added answers to all questions in the README file.